Minor bug fixes and minor design changes

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -108,18 +108,17 @@
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
-            <androidx.appcompat.widget.AppCompatSeekBar
+            <com.google.android.material.slider.Slider
                 android:id="@+id/trackSlider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvAlbumTrack"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginRight="16dp"
-                android:maxHeight="5dp"
-                android:progressDrawable="@drawable/sk_progress_music"
-                android:splitTrack="false"
-                android:thumb="@drawable/sk_thumb_music" />
+                android:contentDescription="@string/playing"
+                android:valueFrom="0"
+                android:valueTo="1" />
 
             <TextView
                 android:id="@+id/tvPlayedTimeTrack"
@@ -127,8 +126,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trackSlider"
                 android:layout_alignStart="@+id/trackSlider"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:layout_marginTop="@dimen/spacing_tiny"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:textColor="@color/grey_800" />
@@ -139,8 +138,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trackSlider"
                 android:layout_alignEnd="@+id/trackSlider"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginTop="@dimen/spacing_tiny"
+                android:layout_marginEnd="@dimen/spacing_small"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:textColor="@color/grey_800" />
