--- a/app/src/main/res/layout-land/activity_player.xml
+++ b/app/src/main/res/layout-land/activity_player.xml
@@ -85,7 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvTitleTrack"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/spacing_tiny"
                 android:ellipsize="end"
                 android:fontFamily="@font/vazir_regular"
                 android:maxLines="1"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvArtistTrack"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/spacing_tiny"
                 android:ellipsize="end"
                 android:fontFamily="@font/vazir_regular"
                 android:maxLines="1"
@@ -109,18 +109,15 @@
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
-            <androidx.appcompat.widget.AppCompatSeekBar
+            <com.google.android.material.slider.Slider
                 android:id="@+id/trackSlider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvAlbumTrack"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginRight="16dp"
-                android:maxHeight="5dp"
-                android:progressDrawable="@drawable/sk_progress_music"
-                android:splitTrack="false"
-                android:thumb="@drawable/sk_thumb_music" />
+                android:contentDescription="@string/playing" />
 
             <TextView
                 android:id="@+id/tvPlayedTimeTrack"
@@ -128,8 +125,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trackSlider"
                 android:layout_alignStart="@+id/trackSlider"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/spacing_small"
+                android:layout_marginTop="2dp"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:textColor="@color/grey_800" />
@@ -140,8 +137,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trackSlider"
                 android:layout_alignEnd="@+id/trackSlider"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="@dimen/spacing_small"
                 android:paddingLeft="2dp"
                 android:paddingRight="2dp"
                 android:textColor="@color/grey_800" />
@@ -151,7 +148,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_below="@+id/tvPlayedTimeTrack"
-                android:layout_marginTop="@dimen/spacing_mid_medium"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="@dimen/spacing_small"
                 android:layout_toStartOf="@+id/fabPlayPause"
                 android:background="@drawable/round_selector"
@@ -165,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvPlayedTimeTrack"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/spacing_mid_medium"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:contentDescription="@string/play_pause"
                 app:backgroundTint="@color/blue_a400"
                 app:srcCompat="@drawable/ic_play"
@@ -177,7 +174,7 @@
                 android:layout_height="48dp"
                 android:layout_below="@+id/tvPlayedTimeTrack"
                 android:layout_marginStart="@dimen/spacing_small"
-                android:layout_marginTop="@dimen/spacing_mid_medium"
+                android:layout_marginTop="@dimen/spacing_small"
                 android:layout_toEndOf="@+id/fabPlayPause"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/next"
