--- a/app/src/main/res/layout-land/activity_player.xml
+++ b/app/src/main/res/layout-land/activity_player.xml
@@ -109,7 +109,7 @@
                 android:textSize="18sp"
                 android:textStyle="italic" />
 
-            <com.google.android.material.slider.Slider
+            <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
                 android:id="@+id/trackSlider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -119,35 +119,11 @@
                 android:layout_marginRight="16dp"
                 android:contentDescription="@string/playing" />
 
-            <TextView
-                android:id="@+id/tvPlayedTimeTrack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/trackSlider"
-                android:layout_alignStart="@+id/trackSlider"
-                android:layout_marginStart="@dimen/spacing_small"
-                android:layout_marginTop="2dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:textColor="@color/grey_800" />
-
-            <TextView
-                android:id="@+id/tvTotalTimeTrack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/trackSlider"
-                android:layout_alignEnd="@+id/trackSlider"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="@dimen/spacing_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:textColor="@color/grey_800" />
-
             <ImageButton
                 android:id="@+id/btnPreviousTrack"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_below="@+id/tvPlayedTimeTrack"
+                android:layout_below="@+id/trackSlider"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_marginEnd="@dimen/spacing_small"
                 android:layout_toStartOf="@+id/fabPlayPause"
@@ -160,7 +136,7 @@
                 android:id="@+id/fabPlayPause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvPlayedTimeTrack"
+                android:layout_below="@+id/trackSlider"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:contentDescription="@string/play_pause"
@@ -172,7 +148,7 @@
                 android:id="@+id/btnNextTrack"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_below="@+id/tvPlayedTimeTrack"
+                android:layout_below="@+id/trackSlider"
                 android:layout_marginStart="@dimen/spacing_small"
                 android:layout_marginTop="@dimen/spacing_small"
                 android:layout_toEndOf="@+id/fabPlayPause"
