--- a/app/src/main/res/layout-land/activity_player.xml
+++ b/app/src/main/res/layout-land/activity_player.xml
@@ -1,161 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical"
     tools:context=".activities.PlayerActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/actionTop"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
-        app:navigationIcon="@drawable/ic_west"
-        app:navigationIconTint="@color/grey_800">
+        android:id="@+id/playback_toolbar"
+        style="@style/Widget.Audio.Toolbar.Icon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIconTint="@color/grey_800"
+        app:subtitleCentered="true"
+        app:title="@string/playing"
+        app:titleCentered="true"
+        tools:subtitle="1 / 10" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/playback_cover"
+        style="@style/Widget.Audio.Image.Full"
+        android:scaleType="centerCrop"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_medium"
+        app:layout_constraintBottom_toTopOf="@+id/playback_seek_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playback_toolbar"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/ic_audiotrack" />
+
+    <FrameLayout
+        android:id="@+id/playback_song_container"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_constraintBottom_toTopOf="@+id/playback_artist"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toTopOf="@+id/playback_cover"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/vazir_regular"
-            android:text="@string/playing"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/blue_grey_900" />
+            android:id="@+id/playback_song"
+            style="@style/Widget.Audio.TextView.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:text="Song Name" />
 
-        <TextView
-            android:id="@+id/tvCountTrack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginEnd="8dp"
-            android:fontFamily="@font/vazir_regular"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="@color/blue_grey_800" />
-    </com.google.android.material.appbar.MaterialToolbar>
+    </FrameLayout>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <TextView
+        android:id="@+id/playback_artist"
+        style="@style/Widget.Audio.TextView.Secondary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_constraintBottom_toTopOf="@+id/playback_album"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_song_container"
+        tools:text="Artist Name" />
+
+    <TextView
+        android:id="@+id/playback_album"
+        style="@style/Widget.Audio.TextView.Secondary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        app:layout_constraintBottom_toBottomOf="@+id/playback_cover"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_artist"
+        tools:text="Album Name" />
+
+    <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
+        android:id="@+id/playback_seek_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
+        app:layout_constraintEnd_toEndOf="@+id/playback_song_container"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/trackImage"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="1"
-            android:background="@color/grey_300"
-            android:layoutDirection="ltr"
-            app:shapeAppearanceOverlay="@style/ImageView.Cover" />
+    <ImageButton
+        android:id="@+id/playback_repeat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:background="@drawable/round_selector"
+        android:contentDescription="@string/playing"
+        android:padding="@dimen/spacing_mid_medium"
+        android:src="@drawable/ic_repeat"
+        app:layout_constraintBottom_toBottomOf="@+id/playback_skip_prev"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/playback_skip_prev"
+        app:tint="@color/grey_800" />
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:layoutDirection="ltr">
+    <ImageButton
+        android:id="@+id/playback_skip_prev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_selector"
+        android:contentDescription="@string/previous"
+        android:padding="@dimen/spacing_mid_medium"
+        android:src="@drawable/ic_skip_previous"
+        app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
+        app:layout_constraintEnd_toStartOf="@+id/playback_play_pause"
+        app:layout_constraintStart_toEndOf="@+id/playback_repeat"
+        app:layout_constraintTop_toTopOf="@+id/playback_play_pause"
+        app:tint="@color/grey_800" />
 
-            <TextView
-                android:id="@+id/tvTitleTrack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginHorizontal="24dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/vazir_regular"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:textColor="@color/grey_900"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/playback_play_pause"
+        style="@style/Widget.Audio.FloatingActionButton.PlayPause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/spacing_medium"
+        android:contentDescription="@string/play_pause"
+        android:src="@drawable/ic_play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/playback_seek_bar"
+        app:layout_constraintStart_toStartOf="@+id/playback_seek_bar" />
 
-            <TextView
-                android:id="@+id/tvArtistTrack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvTitleTrack"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="@dimen/spacing_tiny"
-                android:ellipsize="end"
-                android:fontFamily="@font/vazir_regular"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:textColor="@color/grey_800"
-                android:textSize="18sp"
-                android:textStyle="italic" />
+    <ImageButton
+        android:id="@+id/playback_skip_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_selector"
+        android:contentDescription="@string/next"
+        android:padding="@dimen/spacing_mid_medium"
+        android:src="@drawable/ic_skip_next"
+        app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
+        app:layout_constraintEnd_toStartOf="@+id/playback_shuffle"
+        app:layout_constraintStart_toEndOf="@+id/playback_play_pause"
+        app:layout_constraintTop_toTopOf="@+id/playback_play_pause"
+        app:tint="@color/grey_800" />
 
-            <TextView
-                android:id="@+id/tvAlbumTrack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvArtistTrack"
-                android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="@dimen/spacing_tiny"
-                android:ellipsize="end"
-                android:fontFamily="@font/vazir_regular"
-                android:maxLines="1"
-                android:textAlignment="center"
-                android:textColor="@color/grey_800"
-                android:textSize="18sp"
-                android:textStyle="italic" />
+    <ImageButton
+        android:id="@+id/playback_shuffle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing_medium"
+        android:background="@drawable/round_selector"
+        android:contentDescription="@string/playing"
+        android:padding="@dimen/spacing_mid_medium"
+        android:src="@drawable/ic_shuffle"
+        app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/playback_skip_next"
+        app:tint="@color/grey_800" />
 
-            <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
-                android:id="@+id/trackSlider"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvAlbumTrack"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:layout_marginRight="16dp"
-                android:contentDescription="@string/playing" />
-
-            <ImageButton
-                android:id="@+id/btnPreviousTrack"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/trackSlider"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:layout_marginEnd="@dimen/spacing_small"
-                android:layout_toStartOf="@+id/fabPlayPause"
-                android:background="@drawable/round_selector"
-                android:contentDescription="@string/previous"
-                android:src="@drawable/ic_skip_previous"
-                app:tint="@color/grey_800" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabPlayPause"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/trackSlider"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:contentDescription="@string/play_pause"
-                app:backgroundTint="@color/blue_a400"
-                app:srcCompat="@drawable/ic_play"
-                app:tint="@color/grey_50" />
-
-            <ImageButton
-                android:id="@+id/btnNextTrack"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_below="@+id/trackSlider"
-                android:layout_marginStart="@dimen/spacing_small"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:layout_toEndOf="@+id/fabPlayPause"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/next"
-                android:src="@drawable/ic_skip_next"
-                app:tint="@color/grey_800" />
-        </RelativeLayout>
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
