--- a/app/src/main/res/layout-w600dp-land/activity_player.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_player.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_bg"
     tools:context=".activities.PlayerActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -21,60 +20,73 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/playback_cover"
         style="@style/Widget.Audio.Image.Full"
-        android:layout_margin="@dimen/spacing_medium"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@+id/playback_song"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="@dimen/spacing_medium"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playback_toolbar"
         app:srcCompat="@drawable/ic_audiotrack" />
 
-    <TextView
-        android:id="@+id/playback_song"
-        style="@style/Widget.Audio.TextView.Primary"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/playback_song_container"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
         app:layout_constraintBottom_toTopOf="@+id/playback_artist"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="Song Name" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_toolbar"
+        app:layout_constraintVertical_chainStyle="packed">
+
+        <TextView
+            android:id="@+id/playback_song"
+            style="@style/Widget.Audio.TextView.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:text="Song Name" />
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/playback_artist"
         style="@style/Widget.Audio.TextView.Secondary"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
         app:layout_constraintBottom_toTopOf="@+id/playback_album"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_song_container"
         tools:text="Artist Name" />
 
     <TextView
         android:id="@+id/playback_album"
         style="@style/Widget.Audio.TextView.Secondary"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
         app:layout_constraintBottom_toTopOf="@+id/playback_seek_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_artist"
         tools:text="Album Name" />
 
     <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
         android:id="@+id/playback_seek_bar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacing_mid_medium"
+        android:layout_marginBottom="@dimen/spacing_tiny"
         app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_album" />
 
     <ImageButton
         android:id="@+id/playback_repeat"
@@ -86,8 +98,10 @@
         android:padding="@dimen/spacing_mid_medium"
         android:src="@drawable/ic_repeat"
         app:layout_constraintBottom_toBottomOf="@+id/playback_skip_prev"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/playback_skip_prev" />
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@+id/playback_seek_bar"
+        app:layout_constraintTop_toTopOf="@+id/playback_skip_prev"
+        app:tint="@color/grey_800" />
 
     <ImageButton
         android:id="@+id/playback_skip_prev"
@@ -108,12 +122,13 @@
         style="@style/Widget.Audio.FloatingActionButton.PlayPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacing_medium"
         android:contentDescription="@string/play_pause"
         android:src="@drawable/ic_play"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/playback_seek_bar"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/playback_cover"
+        app:layout_constraintTop_toBottomOf="@+id/playback_seek_bar" />
 
     <ImageButton
         android:id="@+id/playback_skip_next"
@@ -122,7 +137,6 @@
         android:background="@drawable/round_selector"
         android:contentDescription="@string/next"
         android:padding="@dimen/spacing_mid_medium"
-        android:scaleType="fitCenter"
         android:src="@drawable/ic_skip_next"
         app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
         app:layout_constraintEnd_toStartOf="@+id/playback_shuffle"
@@ -138,11 +152,9 @@
         android:background="@drawable/round_selector"
         android:contentDescription="@string/playing"
         android:padding="@dimen/spacing_mid_medium"
-        android:scaleType="fitCenter"
         android:src="@drawable/ic_shuffle"
         app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/playback_seek_bar"
         app:layout_constraintTop_toTopOf="@+id/playback_skip_next"
         app:tint="@color/grey_800" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
