--- a/app/src/main/res/layout-w600dp-land/activity_player.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_player.xml
@@ -20,12 +20,13 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/playback_cover"
         style="@style/Widget.Audio.Image.Full"
-        android:scaleType="centerCrop"
         android:layout_margin="@dimen/spacing_medium"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playback_toolbar"
-        app:srcCompat="@drawable/ic_audiotrack" />
+        tools:src="@drawable/ic_audiotrack"
+        tools:tint="@color/pink_400" />
 
     <FrameLayout
         android:id="@+id/playback_song_container"
