--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -27,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/playback_toolbar"
-        app:srcCompat="@drawable/ic_audiotrack" />
+        tools:src="@drawable/ic_audiotrack"
+        tools:tint="@color/pink_400" />
 
     <TextView
         android:id="@+id/playback_song"
