--- a/app/src/main/res/layout/activity_tracks.xml
+++ b/app/src/main/res/layout/activity_tracks.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_west"
-        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
+        app:titleTextAppearance="@style/TextAppearance.Action.TitleMedium" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/tracksRefresh"
