--- a/app/src/main/res/layout-land/activity_player.xml
+++ b/app/src/main/res/layout-land/activity_player.xml
@@ -12,10 +12,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIconTint="@color/grey_800"
-        app:subtitleCentered="true"
         app:title="@string/playing"
-        app:titleCentered="true"
-        tools:subtitle="1 / 10" />
+        app:titleCentered="true" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/playback_cover"
@@ -30,8 +28,9 @@
         tools:src="@drawable/ic_audiotrack"
         tools:tint="@color/pink_400" />
 
-    <FrameLayout
-        android:id="@+id/playback_song_container"
+    <TextView
+        android:id="@+id/playback_song"
+        style="@style/Widget.Audio.TextView.Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
@@ -41,16 +40,8 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/playback_cover"
         app:layout_constraintTop_toTopOf="@+id/playback_cover"
-        app:layout_constraintVertical_chainStyle="packed">
-
-        <TextView
-            android:id="@+id/playback_song"
-            style="@style/Widget.Audio.TextView.Primary"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:text="Song Name" />
-
-    </FrameLayout>
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="Song Name" />
 
     <TextView
         android:id="@+id/playback_artist"
@@ -59,33 +50,50 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
-        app:layout_constraintBottom_toTopOf="@+id/playback_album"
+        app:layout_constraintBottom_toTopOf="@+id/playback_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/playback_cover"
-        app:layout_constraintTop_toBottomOf="@+id/playback_song_container"
+        app:layout_constraintTop_toBottomOf="@+id/playback_song"
         tools:text="Artist Name" />
 
-    <TextView
-        android:id="@+id/playback_album"
-        style="@style/Widget.Audio.TextView.Secondary"
+    <LinearLayout
+        android:id="@+id/playback_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/playback_cover"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/playback_cover"
-        app:layout_constraintTop_toBottomOf="@+id/playback_artist"
-        tools:text="Album Name" />
+        app:layout_constraintTop_toBottomOf="@+id/playback_artist">
+
+        <TextView
+            android:id="@+id/playback_album"
+            style="@style/Widget.Audio.TextView.Secondary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_tiny"
+            android:layout_weight="1"
+            tools:text="Album Name" />
+
+        <TextView
+            android:id="@+id/playback_count"
+            style="@style/Widget.Audio.TextView.Secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue_500"
+            tools:text="5 / 15" />
+    </LinearLayout>
 
     <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
         android:id="@+id/playback_seek_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
-        app:layout_constraintEnd_toEndOf="@+id/playback_song_container"
+        app:layout_constraintEnd_toEndOf="@+id/playback_song"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -149,7 +157,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_medium"
         android:background="@drawable/round_selector"
-        android:contentDescription="@string/playing"
+        android:contentDescription="@string/shuffle_disabled"
         android:padding="@dimen/spacing_mid_medium"
         android:src="@drawable/ic_shuffle"
         app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
