--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -13,10 +13,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIconTint="@color/grey_800"
-        app:subtitleCentered="true"
         app:title="@string/playing"
-        app:titleCentered="true"
-        tools:subtitle="1 / 10" />
+        app:titleCentered="true" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/playback_cover"
@@ -50,22 +48,39 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
-        app:layout_constraintBottom_toTopOf="@+id/playback_album"
+        app:layout_constraintBottom_toTopOf="@+id/playback_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Artist Name" />
 
-    <TextView
-        android:id="@+id/playback_album"
-        style="@style/Widget.Audio.TextView.Secondary"
+    <LinearLayout
+        android:id="@+id/playback_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_marginEnd="@dimen/spacing_medium"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/playback_seek_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Album Name" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/playback_album"
+            style="@style/Widget.Audio.TextView.Secondary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/spacing_tiny"
+            android:layout_weight="1"
+            tools:text="Album Name" />
+
+        <TextView
+            android:id="@+id/playback_count"
+            style="@style/Widget.Audio.TextView.Secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/blue_500"
+            tools:text="5 / 15" />
+    </LinearLayout>
 
     <com.mohammadkk.myaudioplayer.ui.MusicSeekBar
         android:id="@+id/playback_seek_bar"
@@ -137,7 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_medium"
         android:background="@drawable/round_selector"
-        android:contentDescription="@string/playing"
+        android:contentDescription="@string/shuffle_disabled"
         android:padding="@dimen/spacing_mid_medium"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_shuffle"
