--- a/app/src/main/res/layout/fragment_songs.xml
+++ b/app/src/main/res/layout/fragment_songs.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/spacing_medium"
-        android:contentDescription="@string/shuffle_am"
+        android:contentDescription="@string/shuffle_disabled"
         android:text="@string/shuffle_placeholder"
         android:textColor="@color/grey_900"
         app:backgroundTint="@color/light_blue_100"
