--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,8 +7,8 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="actionModeBackground">@color/grey_800</item>
         <item name="android:windowBackground">@color/main_bg</item>
-        <item name="popupMenuStyle">@style/PopupMenu</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
