--- a/app/src/main/res/layout/item_albums.xml
+++ b/app/src/main/res/layout/item_albums.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/spacing_small"
     android:layout_marginTop="@dimen/spacing_small"
-    android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="8dp"
+    app:cardElevation="0dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imgCoverItem"
@@ -15,7 +14,6 @@
         android:layout_height="140dp"
         android:background="@color/grey_300"
         android:scaleType="center"
-        app:shapeAppearanceOverlay="@style/ImageView.ImageCurvedRounded"
         app:srcCompat="@drawable/ic_album" />
 
     <LinearLayout
@@ -31,13 +29,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/vazir_regular"
             android:gravity="center"
             android:includeFontPadding="false"
             android:lineSpacingExtra="0dp"
             android:maxLines="1"
             android:paddingHorizontal="6dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+            android:textAppearance="@style/TextViewBody2"
             android:textColor="@color/white" />
 
         <TextView
@@ -46,13 +43,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:ellipsize="end"
-            android:fontFamily="@font/vazir_regular"
             android:gravity="center"
             android:includeFontPadding="false"
             android:lineSpacingExtra="0dp"
             android:maxLines="1"
             android:paddingHorizontal="6dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            android:textAppearance="@style/TextViewCaption"
             android:textColor="@color/grey_50" />
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
