--- a/app/src/main/res/layout/item_songs.xml
+++ b/app/src/main/res/layout/item_songs.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/spacing_small"
     android:layout_marginTop="@dimen/spacing_small"
-    android:background="@drawable/background_list_items_one"
+    android:background="@drawable/rect_round_selector"
     android:minHeight="?attr/listPreferredItemHeight">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -26,14 +26,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:fontFamily="@font/vazir_regular"
         android:includeFontPadding="false"
         android:lineSpacingExtra="0dp"
         android:maxLines="1"
         android:paddingHorizontal="@dimen/spacing_small"
         android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
-        android:textColor="@color/grey_900"
+        android:textAppearance="@style/TextViewBody2"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvTrackHistroyItem"
         app:layout_constraintEnd_toStartOf="@+id/ivMoreOptions"
@@ -47,14 +45,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:ellipsize="end"
-        android:fontFamily="@font/vazir_regular"
         android:includeFontPadding="false"
         android:lineSpacingExtra="0dp"
         android:maxLines="1"
         android:paddingHorizontal="@dimen/spacing_small"
         android:textAlignment="viewStart"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-        android:textColor="@color/grey_900"
+        android:textAppearance="@style/TextViewCaption"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ivMoreOptions"
         app:layout_constraintStart_toEndOf="@+id/imgArtTrackItem"
@@ -64,7 +61,6 @@
         android:id="@+id/ivMoreOptions"
         style="@style/BtnOverflowStyle"
         android:layout_marginEnd="@dimen/spacing_tiny"
-        android:rotation="90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
