--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.MyAudioPlayer" parent="@style/Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.MyAudioPlayer" parent="@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/light_blue_500</item>
         <item name="colorPrimaryVariant">@color/light_blue_600</item>
         <item name="colorSecondary">@color/cyan_300</item>
@@ -7,10 +7,10 @@
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="materialAlertDialogTheme">@style/Theme.Audio.MaterialAlertDialog</item>
         <item name="actionModeBackground">@color/grey_800</item>
         <item name="android:windowBackground">@color/main_bg</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <style name="Theme.MyAudioPlayer.Stater" parent="Theme.MyAudioPlayer">
